fix redirect issue and modal visibility

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ ul {
 }
 .modal{
     position: fixed;
-    top: -50%;
+    top: -90%;
     left: 50%;
     transform: translate(-50%,-50%);
     transition: top 0.3s ease-in-out;
@@ -228,7 +228,7 @@ ul {
     background-color: #fff;
 }
 .modal.active{
-    top: 50%;
+    top: 90%;
 }
 .modal-header{
    display: flex;
